APF-1746-Pull request comments fixes